# cat-rush

./: .gitattributes  .gitignore  Build_Clang.bat  Build_Clang.txt  Build_windows_64.bat  CMakeLists.txt  CatRush.sln.DotSettings  LICENSE  README.md  conanfile.txt
Libraries/msvc/boost/lib/: boost_filesystem-vc140-mt-1_60.lib  boost_filesystem-vc140-mt-gd-1_60.lib  boost_system-vc140-mt-1_60.lib  boost_system-vc140-mt-gd-1_60.lib
Prefabs/: Chopstick_projectile.json  Noodle_projectile.json
Preferences/: Keybindings.xml  Preferences.ini  game_constants.ini  user_settings.ini
Resources/Dialogues/: DataTest2.xml
Resources/Textures/: Player.psd
Source code/Game/Header files/Audio/: Audio_player.h  Sound.h
Source code/Game/Header files/Debug/: Logger.h
Source code/Game/Header files/Geometry/: Shapes.h  Vector.h
Source code/Game/Header files/Graphics/: Animation.h  Colors.h  Render_instance.h  Renderer.h  Texture.h  Texture_manager.h
Source code/Game/Header files/IO/: File_paths.h  INI.h  JSON_extensions.h
Source code/Game/Header files/Input/: Input_context.h  Input_handler.h  Input_types.h
Source code/Game/Header files/Libraries/: INIReader.h  json.hpp
Source code/Game/Header files/Main/: Camera.h  Game_core.h  Playing_state.h  Resource_managers.h  Service_locator.h  Settings.h  Text_state.h  Window.h  World.h
Source code/Game/Header files/Math/: Math_functions.h
Source code/Game/Header files/Objects/: Component.h  Game_object.h
Source code/Game/Header files/Objects/Graphics components/: Animated_graphics_component.h  Graphics_component.h  Static_graphics_component.h
Source code/Game/Header files/Objects/Input components/: Combat_component.h  Input_component.h  Noodles_ai_component.h  Player_input_component.h
Source code/Game/Header files/Objects/Physics components/: Acceleration_component.h  Collider_component.h  Movement_component.h
Source code/Game/Header files/Physics/: Collision_system.h
Source code/Game/Header files/Text/: Fonts.h  Text_functions.h
Source code/Game/Header files/Time/: Frame_timer.h  Timer.h
Source code/Game/Header files/UI/: HUD.h
Source code/Game/Header files/Utility/: Communication.h  Randomness.h
Source code/Game/Header files/Wrappers/: SDL_deleter.h  SDL_wrapper.h
Source code/Game/Source files/Audio/: Audio_player.cpp  Sound.cpp
Source code/Game/Source files/Debug/: Logger.cpp
Source code/Game/Source files/Graphics/: Animation.cpp  Colors.cpp  Render_instance.cpp  Renderer.cpp  Texture.cpp  Texture_manager.cpp
Source code/Game/Source files/IO/: File_paths.cpp  INI.cpp  JSON_extensions.cpp
Source code/Game/Source files/Input/: Input_context.cpp  Input_handler.cpp  Input_types.cpp
Source code/Game/Source files/Main/: Camera.cpp  Game_core.cpp  Main.cpp  Playing_state.cpp  Resource_managers.cpp  Service_locator.cpp  Settings.cpp  Text_state.cpp  Window.cpp  World.cpp
Source code/Game/Source files/Objects/: Component.cpp  Game_object.cpp
Source code/Game/Source files/Objects/Graphics components/: Animated_graphics_component.cpp  Graphics_component.cpp  Static_graphics_component.cpp
Source code/Game/Source files/Objects/Input components/: Combat_component.cpp  Input_component.cpp  Noodles_ai_component.cpp  Player_input_component.cpp
Source code/Game/Source files/Objects/Physics components/: Acceleration_component.cpp  Collider_component.cpp  Movement_component.cpp
Source code/Game/Source files/Physics/: Collision_system.cpp
Source code/Game/Source files/Text/: Fonts.cpp  Text_functions.cpp
Source code/Game/Source files/Time/: Frame_timer.cpp  Timer.cpp
Source code/Game/Source files/UI/: HUD.cpp
Source code/Game/Source files/Utility/: Randomness.cpp
Source code/Game/Source files/Wrappers/: SDL_deleter.cpp  SDL_wrapper.cpp
Source images/Player_characters/Meowington/: Meowington_attack.psd  Meowington_crouch.psd  Meowington_idle.psd  Meowington_jump.psd  Meowington_walk.psd
Source images/Player_characters/Purrita/: Purrita_attack.psd  Purrita_crouch.psd  Purrita_idle.psd  Purrita_jump.psd  Purrita_walk.psd
Source images/UI/HUD/: health_bar.psd  health_bar_bg.psd
World/: LevelFileTest.json
